Refactor staff card layout for responsive design

--- a/careers.html
+++ b/careers.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Explore career opportunities at MCP Malabar College of Pharmacy." />
-    <meta name="keywords" content="MCP, Malabar, College, Pharmacy, Careers, Employment" />
+    <meta
+      name="description"
+      content="Explore career opportunities at MCP Malabar College of Pharmacy."
+    />
+    <meta
+      name="keywords"
+      content="MCP, Malabar, College, Pharmacy, Careers, Employment"
+    />
 
-    <title>
-      MCP - Malabar College of Pharmacy
-    </title>
+    <title>MCP - Malabar College of Pharmacy</title>
 
     <link rel="icon" type="image/x-icon" href="assets/img/logo/logo.png" />
 
@@ -28,7 +32,6 @@
         <div class="loader-book-page"></div>
       </div>
     </div>
-
     <header class="header">
       <div class="header-top">
         <div class="container">
@@ -59,22 +62,45 @@
             </div>
             <div class="header-top-right">
               <div class="header-top-social">
-                <span>Follow Us: </span>
-                <a href="http://www.facebook.com/MalabarCollegeofPharmacy"><i class="fab fa-facebook-f"></i></a>
-                <a href="http://www.instagram.com/malabar_college_of_pharmacy"><i class="fab fa-instagram"></i></a>
+                <span>Follow Us:</span>
+                <a href="http://www.facebook.com/MalabarCollegeofPharmacy">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="http://www.instagram.com/malabar_college_of_pharmacy">
+                  <i class="fab fa-instagram"></i>
+                </a>
               </div>
             </div>
           </div>
         </div>
       </div>
+
       <div class="main-navigation">
         <nav class="navbar navbar-expand-lg">
           <div class="container position-relative">
             <a class="navbar-brand" href="/">
-              <img src="assets/img/logo/logo.png" alt="logo" class="mcp_logo" />
+              <img
+                src="assets/img/logo/logo.png"
+                alt="Malabar College of Pharmacy Logo"
+                class="mcp_logo"
+              />
               <!-- <span>Malabar College of Pharmacy</span> -->
             </a>
             <div class="mobile-menu-right">
+              <div class="search-btn">
+                <button type="button" class="nav-right-link search-box-outer">
+                  <i class="far fa-search"></i>
+                </button>
+              </div>
+              <div class="nav-right-btn mt-2">
+                <a
+                  href="login.html"
+                  class="theme-btn"
+                  style="padding: 8px 10px"
+                >
+                  Apply Now
+                </a>
+              </div>
               <button
                 class="navbar-toggler"
                 type="button"
@@ -83,36 +109,227 @@
                 aria-expanded="false"
                 aria-label="Toggle navigation"
               >
-                <span class="navbar-toggler-mobile-icon"><i class="far fa-bars"></i></span>
+                <span class="navbar-toggler-mobile-icon">
+                  <i class="far fa-bars"></i>
+                </span>
               </button>
             </div>
             <div class="collapse navbar-collapse" id="main_nav">
               <ul class="navbar-nav">
-                <li class="nav-item">
+                <li class="nav-item dropdown">
                   <a class="nav-link active" href="/">Home</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/#about-us">About Us</a>
-                </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="" data-bs-toggle="dropdown">Admission</a>
+                  <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
+                    >About HEI</a
+                  >
                   <ul class="dropdown-menu fade-down">
-                        <li><a class="dropdown-item" href="admission.html">Admission</a></li>
-                        <li><a class="dropdown-item" href="/prospectus2024.html">Prospects</a></li>
+                    <li>
+                      <a class="dropdown-item" href="/about-us.html"
+                        >About Us: Overview</a
+                      >
+                    </li>
+                    <!-- <li><a class="dropdown-item" href="act-and-statutes-or-moa.html">Act and Statutes or MOA</a></li> -->
+                    <!-- <li><a class="dropdown-item" href="institutional-development-plan.html">Institutional Development Plan</a></li> -->
+                    <!-- <li class="dropdown-submenu">
+                      <a class="dropdown-item dropdown-toggle" href="#">Accreditation/Ranking Status</a>
+                      <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="naac.html">NAAC</a></li>
+                        <li><a class="dropdown-item" href="NAAC_Files/NIRF/NIRF_2023.pdf" target="_blank">NIRF 2023</a></li>
+                        <li><a class="dropdown-item" href="NAAC_Files/NIRF/NIRF_2022.pdf" target="_blank">NIRF 2022</a></li>
+                      </ul>
+                    </li> -->
+                    <!-- <li><a class="dropdown-item" href="recognition-approval.html">Recognition/Approval</a></li> -->
+                    <!-- <li><a class="dropdown-item" href="annual-reports.html">Annual Reports</a></li> -->
+                    <!-- <li><a class="dropdown-item" href="audited-accounts.html">Audited Accounts</a></li> -->
                   </ul>
                 </li>
+
                 <li class="nav-item dropdown">
-                  <a class="nav-link" href="/#courses">Courses</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Activities</a>
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    data-bs-toggle="dropdown"
+                    >Administration</a
+                  >
                   <ul class="dropdown-menu fade-down">
-                    <li><a class="dropdown-item" href="gallery.html">Gallery</a></li>
+                    <li>
+                      <a
+                        class="dropdown-item"
+                        href="/about-us.html#board-of-directors"
+                        >Board of Management</a
+                      >
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="/about-us.html#principal"
+                        >Principal</a
+                      >
+                    </li>
+                    <!-- <li><a class="dropdown-item" href="finance-officer.html">Finance Officer</a></li> -->
+                    <!-- <li><a class="dropdown-item" href="controller-of-examination.html">Controller of Examination</a></li> -->
+                    <!-- <li><a class="dropdown-item" href="chief-vigilance-officer.html">Chief Vigilance Officer</a></li> -->
+                    <!-- <li><a class="dropdown-item" href="internal-complaint-committee.html">Internal Complaint Committee</a></li> -->
+                    <li>
+                      <a class="dropdown-item" href="academic-leadership.html"
+                        >Academic Leadership</a
+                      >
+                    </li>
+                  </ul>
+                </li>
+
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    data-bs-toggle="dropdown"
+                    >Academics</a
+                  >
+                  <ul class="dropdown-menu fade-down">
+                    <li class="dropdown-submenu">
+                      <a class="dropdown-item dropdown-toggle" href="#"
+                        >Academic Programs</a
+                      >
+                      <ul class="dropdown-menu">
+                        <li>
+                          <a class="dropdown-item" href="bpharm.html">BPharm</a>
+                        </li>
+                      </ul>
+                    </li>
+                    <!-- <li><a class="dropdown-item" href="/assets/MDCRC 2024 ACADEMIC CALENDER.pdf" target="_blank">Academic Calendar</a></li> -->
+                    <!-- <li><a class="dropdown-item" href="/assets/ACADEMICPROSPECTS.pdf" target="_blank">Ordinances pertaining to <br>Academics/Examinations</a></li> -->
+                    <li class="dropdown-submenu">
+                      <a class="dropdown-item dropdown-toggle" href="#"
+                        >Departments</a
+                      >
+                      <ul class="dropdown-menu">
+                        <li>
+                          <a
+                            class="dropdown-item"
+                            href="pharmaceutical-chemistry.html"
+                            >Pharmaceutical Chemistry</a
+                          >
+                        </li>
+                        <li>
+                          <a class="dropdown-item" href="pharmacology.html"
+                            >Pharmacology</a
+                          >
+                        </li>
+                        <li>
+                          <a class="dropdown-item" href="pharmaceutics.html"
+                            >Pharmaceutics</a
+                          >
+                        </li>
+                        <li>
+                          <a class="dropdown-item" href="pharmacy-practice.html"
+                            >Pharmacy Practice</a
+                          >
+                        </li>
+                        <li>
+                          <a class="dropdown-item" href="pharmacognosy.html"
+                            >Pharmacognosy</a
+                          >
+                        </li>
+                      </ul>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="library.html">Library</a>
+                    </li>
+                    <!-- <li><a class="dropdown-item" href="feedbacks.html">Feedbacks</a></li> -->
+                    <!-- <li><a class="dropdown-item" href="journals.html">Journals</a></li> -->
+                    <li>
+                      <a class="dropdown-item" href="admission.html"
+                        >Admission</a
+                      >
+                    </li>
+                    <!-- <li><a class="dropdown-item" href="code-of-conduct.html">Code of Conduct</a></li> -->
+                  </ul>
+                </li>
+
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    data-bs-toggle="dropdown"
+                    >Admission & Fee</a
+                  >
+                  <ul class="dropdown-menu fade-down">
+                    <li>
+                      <a class="dropdown-item" href="prospectus2024.html"
+                        >Prospectus</a
+                      >
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="admission.html"
+                        >Admission Process And Guidelines</a
+                      >
+                    </li>
+                    <!-- <li><a class="dropdown-item" href="fund-refund-policy.html">Fund Refund Policy</a></li> -->
+                  </ul>
+                </li>
+
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    data-bs-toggle="dropdown"
+                    >Student Life</a
+                  >
+                  <ul class="dropdown-menu fade-down">
+                    <li>
+                      <a class="dropdown-item" href="anti-ragging-cell.html"
+                        >Anti-Ragging Cell</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="dropdown-item"
+                        href="gender-sensitisation-committee.html"
+                        >Gender Harassment Committee</a
+                      >
+                    </li>
+                  </ul>
+                </li>
+
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    data-bs-toggle="dropdown"
+                    >Information Corner</a
+                  >
+                  <ul class="dropdown-menu fade-down">
+                    <li>
+                      <a class="dropdown-item" href="circulars-and-notices.html"
+                        >Circulars and Notices</a
+                      >
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="announcements.html"
+                        >Announcements</a
+                      >
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="newsletters.html"
+                        >Newsletters</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="dropdown-item"
+                        href="news-recent-events-achievements.html"
+                        >News, Recent Events & Achievements</a
+                      >
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="careers.html"
+                        >Job Openings</a
+                      >
+                    </li>
                   </ul>
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="/#contact-us">Contact</a>
+                  <a class="nav-link" href="contact.html">Contact Us</a>
                 </li>
               </ul>
             </div>
@@ -120,9 +337,11 @@
         </nav>
       </div>
     </header>
-
     <main class="main">
-      <div class="site-breadcrumb" style="background: url(assets/img/breadcrumb/careers.jpg)">
+      <div
+        class="site-breadcrumb"
+        style="background: url(assets/img/breadcrumb/careers.jpg)"
+      >
         <div class="container">
           <h2 class="breadcrumb-title">Careers at MCP</h2>
           <ul class="breadcrumb-menu">
@@ -135,7 +354,10 @@
       <div class="career-opportunities py-120">
         <div class="container">
           <h3>Current Openings</h3>
-          <p class="mt-4">At present, MCP has no vacancies. Please revisit our page for future job postings.</p>
+          <p class="mt-4">
+            At present, MCP has no vacancies. Please revisit our page for future
+            job postings.
+          </p>
         </div>
       </div>
     </main>
@@ -149,13 +371,18 @@
                 <h4 class="footer-widget-title">Contact Us</h4>
                 <ul class="footer-contact">
                   <li>
-                    <a href="tel:+917034555559"><i class="far fa-phone"></i>+91 7034555559</a>
+                    <a href="tel:+917034555559"
+                      ><i class="far fa-phone"></i>+91 7034555559</a
+                    >
                   </li>
                   <li>
-                    <i class="far fa-map-marker-alt"></i>Manoor - Chekanoor Road, Manoor, Edappal, Malappuram, Kerala 679578
+                    <i class="far fa-map-marker-alt"></i>Manoor - Chekanoor
+                    Road, Manoor, Edappal, Malappuram, Kerala 679578
                   </li>
                   <li>
-                    <a href="mailto:mcp@macity.edu.in"><i class="far fa-envelope"></i>mcp@macity.edu.in</a>
+                    <a href="mailto:mcp@macity.edu.in"
+                      ><i class="far fa-envelope"></i>mcp@macity.edu.in</a
+                    >
                   </li>
                 </ul>
               </div>
@@ -164,8 +391,16 @@
               <div class="footer-widget-box list">
                 <h4 class="footer-widget-title">Quick Links</h4>
                 <ul class="footer-list">
-                  <li><a href="/#about-us"><i class="fas fa-caret-right"></i> About Us</a></li>
-                  <li><a href="/#testimonial"><i class="fas fa-caret-right"></i> Testimonials</a></li>
+                  <li>
+                    <a href="/#about-us"
+                      ><i class="fas fa-caret-right"></i> About Us</a
+                    >
+                  </li>
+                  <li>
+                    <a href="/#testimonial"
+                      ><i class="fas fa-caret-right"></i> Testimonials</a
+                    >
+                  </li>
                 </ul>
               </div>
             </div>
@@ -176,8 +411,14 @@
                   <p>Subscribe Our Newsletter To Get Latest Update And News</p>
                   <div class="subscribe-form">
                     <form action="#">
-                      <input type="email" class="form-control" placeholder="Your Email" />
-                      <button class="theme-btn" type="submit">Subscribe Now <i class="far fa-paper-plane"></i></button>
+                      <input
+                        type="email"
+                        class="form-control"
+                        placeholder="Your Email"
+                      />
+                      <button class="theme-btn" type="submit">
+                        Subscribe Now <i class="far fa-paper-plane"></i>
+                      </button>
                     </form>
                   </div>
                 </div>
