--- a/library.html
+++ b/library.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Mirrored from live.themewild.com/edubo/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 16 May 2024 05:26:38 GMT -->
+  <!-- Mirrored from live.themewild.com/edubo/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 16 May 2024 05:23:34 GMT -->
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content />
-    <meta name="keywords" content />
+    <meta name="description" content="MCP Malabar College of Pharmacy - Providing quality education in pharmacy." />
+    <meta name="keywords" content="MCP, Malabar, College, Pharmacy, Education, Quality" />
 
-    <title>MCP - Malabar College of Pharmacy</title>
+    <title>
+      MCP - Malabar College of Pharmacy
+    </title>
+
     <link rel="icon" type="image/x-icon" href="assets/img/logo/logo.png" />
 
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
@@ -118,15 +121,15 @@
                   <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
                     >About HEI</a
                   >
-                  <ul class="dropdown-menu fade-down">
+                    <ul class="dropdown-menu fade-down">
                     <li>
                       <a class="dropdown-item" href="/about-us.html"
                         >About Us: Overview</a
                       >
                     </li>
-                    <!-- <li><a class="dropdown-item" href="act-and-statutes-or-moa.html">Act and Statutes or MOA</a></li> -->
-                    <!-- <li><a class="dropdown-item" href="institutional-development-plan.html">Institutional Development Plan</a></li> -->
-                    <!-- <li class="dropdown-submenu">
+                  <!-- <li><a class="dropdown-item" href="act-and-statutes-or-moa.html">Act and Statutes or MOA</a></li> -->
+                  <!-- <li><a class="dropdown-item" href="institutional-development-plan.html">Institutional Development Plan</a></li> -->
+                  <!-- <li class="dropdown-submenu">
                       <a class="dropdown-item dropdown-toggle" href="#">Accreditation/Ranking Status</a>
                       <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="naac.html">NAAC</a></li>
@@ -134,9 +137,9 @@
                         <li><a class="dropdown-item" href="NAAC_Files/NIRF/NIRF_2022.pdf" target="_blank">NIRF 2022</a></li>
                       </ul>
                     </li> -->
-                    <!-- <li><a class="dropdown-item" href="recognition-approval.html">Recognition/Approval</a></li> -->
-                    <!-- <li><a class="dropdown-item" href="annual-reports.html">Annual Reports</a></li> -->
-                    <!-- <li><a class="dropdown-item" href="audited-accounts.html">Audited Accounts</a></li> -->
+                  <!-- <li><a class="dropdown-item" href="recognition-approval.html">Recognition/Approval</a></li> -->
+                  <!-- <li><a class="dropdown-item" href="annual-reports.html">Annual Reports</a></li> -->
+                  <!-- <li><a class="dropdown-item" href="audited-accounts.html">Audited Accounts</a></li> -->
                   </ul>
                 </li>
 
@@ -270,11 +273,11 @@
                     >Student Life</a
                   >
                   <ul class="dropdown-menu fade-down">
-                    <!-- <li>
+                    <li>
                       <a class="dropdown-item" href="anti-ragging-cell.html"
                         >Anti-Ragging Cell</a
                       >
-                    </li> -->
+                    </li>
                     <li>
                       <a
                         class="dropdown-item"
@@ -331,8 +334,7 @@
           </div>
         </nav>
       </div>
-    </header>
-
+    </header>  
     <div class="search-popup">
       <button class="close-search"><span class="far fa-times"></span></button>
       <form action="#">
@@ -354,96 +356,92 @@
         style="background: url(assets/img/breadcrumb/01.jpg)"
       >
         <div class="container">
-          <h2 class="breadcrumb-title">404 Error</h2>
+          <h2 class="breadcrumb-title">Library</h2>
           <ul class="breadcrumb-menu">
             <li><a href="/">Home</a></li>
-            <li class="active">404 Error</li>
+            <li class="active">Library</li>
           </ul>
         </div>
       </div>
 
-      <div class="error-area py-120">
+      <div class="event-area py-120">
         <div class="container">
-          <div class="col-md-6 mx-auto">
-            <div class="error-wrapper">
-              <div class="error-img">
-                <img src="assets/img/error/01.png" alt />
+          <!-- <div class="row">
+            <div class="col-lg-6 mx-auto">
+              <div class="site-heading text-center">
+                <span class="site-title-tagline"
+                  ><i class="far fa-book-open-reader"></i> Act and Statutes or MoA</span
+                >
+                <h2 class="site-title">Our Upcoming <span>Act and Statutes or MoA</span></h2>
+                <p>
+                  It is a long established fact that a reader will be distracted
+                  by the readable content of a page when looking at its layout.
+                </p>
               </div>
-              <h2>Opos... Page Not Found!</h2>
-              <p>
-                The page you looking for not found may be it not exist or
-                removed.
-              </p>
-              <a href="/" class="theme-btn"
-                >Go Back Home <i class="far fa-home"></i
-              ></a>
             </div>
+          </div> -->
+
+
+          <div class="row">
           </div>
+
+          
         </div>
       </div>
     </main>
 
     <footer class="footer-area">
-      <div class="footer-shape">
-        <img src="assets/img/logo/logo.png" alt="" class="footer-logo" />
-      </div>
-      <div class="footer-widget">
-        <div class="container">
-          <div class="row footer-widget-wrapper pt-100 pb-70">
-            <div class="col-md-6 col-lg-4">
-              <div class="footer-widget-box about-us">
-                <!-- <a href="/" class="footer-logo">
+        <div class="footer-shape">
+          <img src="assets/img/logo/logo.png" alt="" class="footer-logo"  />
+        </div>
+        <div class="footer-widget">
+          <div class="container">
+            <div class="row footer-widget-wrapper pt-100 pb-70">
+              <div class="col-md-6 col-lg-4">
+                <div class="footer-widget-box about-us">
+                  <!-- <a href="/" class="footer-logo">
                     <span style="font-size: larger; color: #125875; font-weight: bolder;">Malabar College of Pharmacy</span>
                   </a> -->
-                <!-- <p class="mb-3">
+                  <!-- <p class="mb-3">
                     We are many variations of passages available but the majority
                     have suffered alteration in some form by injected humour words
                     believable.
                   </p> -->
-                <h4 class="footer-widget-title">Contact Us</h4>
-                <ul class="footer-contact">
-                  <li>
-                    <i class="far fa-map-marker-alt"></i>Manoor - Chekanoor
-                    Road, Manoor, Edappal,<br />
-                    Malappuram, Kerala 679578
-                  </li>
-                  <li>
-                    <a href="tel:+917034555559"
-                      ><i class="far fa-phone"></i>+91 7034555559</a
-                    >
-                  </li>
-                  <li>
-                    <a href="tel:1800180552"
-                      ><i class="far fa-phone"></i>1800-180-5522 (Toll free for
-                      reporting ragging)</a
-                    >
-                  </li>
-                  <li>
-                    <a href="mailto:mcp@macity.edu.in">
-                      <i class="far fa-envelope"></i>mcp@macity.edu.in
-                    </a>
-                  </li>
-                </ul>
+                  <h4 class="footer-widget-title">Contact Us</h4>
+                  <ul class="footer-contact">
+                    <li>
+                      <a href="tel:+917034555559"
+                        ><i class="far fa-phone"></i>+91 7034555559</a
+                      >
+                    </li>
+                    <li>
+                      <i class="far fa-map-marker-alt"></i>Manoor - Chekanoor Road, Manoor, Edappal,<br/> Malappuram,
+                      Kerala 679578
+                    </li>
+                    <li>
+                      <a href="mailto:mcp@macity.edu.in">
+                        <i class="far fa-envelope"></i>mcp@macity.edu.in
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
-            </div>
-            <div class="col-md-6 col-lg-2">
-              <div class="footer-widget-box list">
-                <h4 class="footer-widget-title">Quick Links</h4>
-                <ul class="footer-list">
-                  <li>
-                    <a href="/about-us.html"
-                      ><i class="fas fa-caret-right"></i> About Us</a
-                    >
-                  </li>
-                  <!-- <li>
+              <div class="col-md-6 col-lg-2">
+                <div class="footer-widget-box list">
+                  <h4 class="footer-widget-title">Quick Links</h4>
+                  <ul class="footer-list">
+                    <li>
+                      <a href="#about-us"><i class="fas fa-caret-right"></i> About Us</a>
+                    </li>
+                    <!-- <li>
                       <a href="#"><i class="fas fa-caret-right"></i> FAQ's</a>
                     </li> -->
-                  <li>
-                    <a href="index.html#testimonial"
-                      ><i class="fas fa-caret-right"></i> Testimonials</a
-                    >
-                  </li>
-                  <!-- <li>
+                    <li>
+                      <a href="#testimonial"
+                        ><i class="fas fa-caret-right"></i> Testimonials</a
+                      >
+                    </li>
+                    <!-- <li>
                       <a href="#"
                         ><i class="fas fa-caret-right"></i> Terms Of Service</a
                       >
@@ -453,112 +451,102 @@
                         ><i class="fas fa-caret-right"></i> Privacy policy</a
                       >
                     </li> -->
-                  <!-- <li>
+                    <!-- <li>
                       <a href="#"
                         ><i class="fas fa-caret-right"></i> Update News</a
                       >
                     </li> -->
-                </ul>
+                  </ul>
+                </div>
               </div>
-            </div>
-            <!-- <div class="col-md-6 col-lg-3">
-              <div class="footer-widget-box list">
-                <h4 class="footer-widget-title">Our Campus</h4>
-                <ul class="footer-list">
-                  <li>
-                    <a href="#"
-                      ><i class="fas fa-caret-right"></i> Campus Safety</a
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><i class="fas fa-caret-right"></i> Student Activities</a
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><i class="fas fa-caret-right"></i> Academic Department</a
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><i class="fas fa-caret-right"></i> Planning &
-                      Administration</a
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><i class="fas fa-caret-right"></i> Office Of The
-                      Chancellor</a
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><i class="fas fa-caret-right"></i> Facility Services</a
-                    >
-                  </li>
-                </ul>
+              <div class="col-md-6 col-lg-3">
+                <div class="footer-widget-box list">
+                  <h4 class="footer-widget-title">Our Campus</h4>
+                  <ul class="footer-list">
+                    <li>
+                      <a href="#"
+                        ><i class="fas fa-caret-right"></i> Campus Safety</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><i class="fas fa-caret-right"></i> Student Activities</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><i class="fas fa-caret-right"></i> Academic Department</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><i class="fas fa-caret-right"></i> Planning &
+                        Administration</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><i class="fas fa-caret-right"></i> Office Of The
+                        Chancellor</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><i class="fas fa-caret-right"></i> Facility Services</a
+                      >
+                    </li>
+                  </ul>
+                </div>
               </div>
-            </div> -->
-            <div class="col-md-6 col-lg-3">
-              <div class="footer-widget-box list">
-                <h4 class="footer-widget-title">Newsletter</h4>
-                <div class="footer-newsletter">
-                  <p>Subscribe Our Newsletter To Get Latest Update And News</p>
-                  <div class="subscribe-form">
-                    <form
-                      method="post"
-                      action="https://formsubmit.co/itmanager@edentu.com"
-                    >
-                      <input
-                        type="email"
-                        class="form-control"
-                        placeholder="Your Email"
-                      />
-                      <button class="theme-btn" type="submit">
-                        Subscribe Now <i class="far fa-paper-plane"></i>
-                      </button>
-                    </form>
+              <div class="col-md-6 col-lg-3">
+                <div class="footer-widget-box list">
+                  <h4 class="footer-widget-title">Newsletter</h4>
+                  <div class="footer-newsletter">
+                    <p>Subscribe Our Newsletter To Get Latest Update And News</p>
+                    <div class="subscribe-form">
+                      <form action="#">
+                        <input
+                          type="email"
+                          class="form-control"
+                          placeholder="Your Email"
+                        />
+                        <button class="theme-btn" type="submit">
+                          Subscribe Now <i class="far fa-paper-plane"></i>
+                        </button>
+                      </form>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="copyright">
-        <div class="container">
-          <div class="copyright-wrapper">
-            <div class="row">
-              <div class="col-md-6 align-self-center">
-                <span>Last updated on 27-11-2024</span>
-                <p class="copyright-text">
-                  &copy; Copyright <span id="date"></span>
-                  <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
-                  Rights Reserved.
-                </p>
-              </div>
-              <div class="col-md-6 align-self-center">
-                <ul class="footer-social">
-                  <li>
-                    <a href="https://www.facebook.com/MalabarCollegeofPharmacy"
-                      ><i class="fab fa-facebook-f"></i
-                    ></a>
-                  </li>
-                  <li>
-                    <a
-                      href="http://www.instagram.com/malabar_college_of_pharmacy"
-                      ><i class="fab fa-instagram"></i
-                    ></a>
-                  </li>
-                </ul>
+        <div class="copyright">
+          <div class="container">
+            <div class="copyright-wrapper">
+              <div class="row">
+                <div class="col-md-6 align-self-center"><span>Last updated on 27-11-2024</span>
+                  <p class="copyright-text">
+                    &copy; Copyright <span id="date"></span>
+                    <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All Rights Reserved.
+                  </p>
+                </div>
+                <div class="col-md-6 align-self-center">
+                  <ul class="footer-social">
+                    <li>
+                      <a href="https://www.facebook.com/MalabarCollegeofPharmacy"><i class="fab fa-facebook-f"></i></a>
+                    </li>
+                    <li>
+                      <a href="http://www.instagram.com/malabar_college_of_pharmacy"><i class="fab fa-instagram"></i></a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </footer>
-
+      </footer>
+  
     <a href="#" id="scroll-top"><i class="far fa-arrow-up-from-arc"></i></a>
 
     <script
@@ -579,5 +567,5 @@
     <script src="assets/js/main.js"></script>
   </body>
 
-  <!-- Mirrored from live.themewild.com/edubo/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 16 May 2024 05:26:39 GMT -->
+  <!-- Mirrored from live.themewild.com/edubo/event.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 16 May 2024 05:26:29 GMT -->
 </html>
