--- a/pharmacognosy.html
+++ b/pharmacognosy.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Mirrored from live.themewild.com/edubo/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 16 May 2024 05:26:38 GMT -->
+  <!-- Mirrored from live.themewild.com/edubo/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 16 May 2024 05:23:34 GMT -->
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content />
-    <meta name="keywords" content />
+    <meta
+      name="description"
+      content="MCP Malabar College of Pharmacy - Providing quality education in pharmacy."
+    />
+    <meta
+      name="keywords"
+      content="MCP, Malabar, College, Pharmacy, Education, Quality"
+    />
 
     <title>MCP - Malabar College of Pharmacy</title>
+
     <link rel="icon" type="image/x-icon" href="assets/img/logo/logo.png" />
 
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
@@ -270,11 +277,11 @@
                     >Student Life</a
                   >
                   <ul class="dropdown-menu fade-down">
-                    <!-- <li>
+                    <li>
                       <a class="dropdown-item" href="anti-ragging-cell.html"
                         >Anti-Ragging Cell</a
                       >
-                    </li> -->
+                    </li>
                     <li>
                       <a
                         class="dropdown-item"
@@ -354,35 +361,42 @@
         style="background: url(assets/img/breadcrumb/01.jpg)"
       >
         <div class="container">
-          <h2 class="breadcrumb-title">404 Error</h2>
+          <h2 class="breadcrumb-title">Pharmacognosy</h2>
           <ul class="breadcrumb-menu">
             <li><a href="/">Home</a></li>
-            <li class="active">404 Error</li>
+            <li class="active">Pharmacognosy</li>
           </ul>
         </div>
       </div>
 
-      <div class="error-area py-120">
+      <!-- Department Section -->
+      <div class="department-area py-120">
         <div class="container">
-          <div class="col-md-6 mx-auto">
-            <div class="error-wrapper">
-              <div class="error-img">
-                <img src="assets/img/error/01.png" alt />
-              </div>
-              <h2>Opos... Page Not Found!</h2>
-              <p>
-                The page you looking for not found may be it not exist or
-                removed.
-              </p>
-              <a href="/" class="theme-btn"
-                >Go Back Home <i class="far fa-home"></i
-              ></a>
-            </div>
+          <!-- Department Information -->
+          <div class="site-heading text-center">
+            <h1>Pharmacognosy Department</h1>
+            <p>
+              The Pharmacognosy Department is dedicated to the study of the
+              physical, chemical, biochemical, and biological properties of
+              drugs derived from natural sources, such as plants, animals, and
+              microorganisms.
+            </p>
           </div>
+
+          <!-- Teaching Staff -->
+          <!-- <div class="staff-section" style="padding-top: 20px;;">
+            <h2 class="section-title" style="margin-bottom: 5px;"">Teaching Staff</h2>
+            <div class="row teaching-staff" id="teaching-staff"></div>
+          </div> -->
+
+          <!-- Non-Teaching Staff -->
+          <!-- <div class="staff-section" style="padding-top: 20px;;">
+            <h2 class="section-title" style="margin-bottom: 5px;">Non-Teaching Staff</h2>
+            <div class="row non-teaching-staff" id="non-teaching-staff"></div>
+          </div> -->
         </div>
       </div>
     </main>
-
     <footer class="footer-area">
       <div class="footer-shape">
         <img src="assets/img/logo/logo.png" alt="" class="footer-logo" />
@@ -393,13 +407,13 @@
             <div class="col-md-6 col-lg-4">
               <div class="footer-widget-box about-us">
                 <!-- <a href="/" class="footer-logo">
-                    <span style="font-size: larger; color: #125875; font-weight: bolder;">Malabar College of Pharmacy</span>
-                  </a> -->
+                        <span style="font-size: larger; color: #125875; font-weight: bolder;">Malabar College of Pharmacy</span>
+                      </a> -->
                 <!-- <p class="mb-3">
-                    We are many variations of passages available but the majority
-                    have suffered alteration in some form by injected humour words
-                    believable.
-                  </p> -->
+                        We are many variations of passages available but the majority
+                        have suffered alteration in some form by injected humour words
+                        believable.
+                      </p> -->
                 <h4 class="footer-widget-title">Contact Us</h4>
                 <ul class="footer-contact">
                   <li>
@@ -436,70 +450,70 @@
                     >
                   </li>
                   <!-- <li>
-                      <a href="#"><i class="fas fa-caret-right"></i> FAQ's</a>
-                    </li> -->
+                          <a href="#"><i class="fas fa-caret-right"></i> FAQ's</a>
+                        </li> -->
                   <li>
                     <a href="index.html#testimonial"
                       ><i class="fas fa-caret-right"></i> Testimonials</a
                     >
                   </li>
                   <!-- <li>
-                      <a href="#"
-                        ><i class="fas fa-caret-right"></i> Terms Of Service</a
-                      >
-                    </li>
-                    <li>
-                      <a href="#"
-                        ><i class="fas fa-caret-right"></i> Privacy policy</a
-                      >
-                    </li> -->
+                          <a href="#"
+                            ><i class="fas fa-caret-right"></i> Terms Of Service</a
+                          >
+                        </li>
+                        <li>
+                          <a href="#"
+                            ><i class="fas fa-caret-right"></i> Privacy policy</a
+                          >
+                        </li> -->
                   <!-- <li>
-                      <a href="#"
-                        ><i class="fas fa-caret-right"></i> Update News</a
-                      >
-                    </li> -->
+                          <a href="#"
+                            ><i class="fas fa-caret-right"></i> Update News</a
+                          >
+                        </li> -->
                 </ul>
               </div>
             </div>
             <!-- <div class="col-md-6 col-lg-3">
-              <div class="footer-widget-box list">
-                <h4 class="footer-widget-title">Our Campus</h4>
-                <ul class="footer-list">
-                  <li>
-                    <a href="#"
-                      ><i class="fas fa-caret-right"></i> Campus Safety</a
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><i class="fas fa-caret-right"></i> Student Activities</a
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><i class="fas fa-caret-right"></i> Academic Department</a
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><i class="fas fa-caret-right"></i> Planning &
-                      Administration</a
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><i class="fas fa-caret-right"></i> Office Of The
-                      Chancellor</a
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><i class="fas fa-caret-right"></i> Facility Services</a
-                    >
-                  </li>
-                </ul>
-              </div>
-            </div> -->
+                  <div class="footer-widget-box list">
+                    <h4 class="footer-widget-title">Our Campus</h4>
+                    <ul class="footer-list">
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-caret-right"></i> Campus Safety</a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-caret-right"></i> Student Activities</a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-caret-right"></i> Academic Department</a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-caret-right"></i> Planning &
+                          Administration</a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-caret-right"></i> Office Of The
+                          Chancellor</a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-caret-right"></i> Facility Services</a
+                        >
+                      </li>
+                    </ul>
+                  </div>
+                </div> -->
             <div class="col-md-6 col-lg-3">
               <div class="footer-widget-box list">
                 <h4 class="footer-widget-title">Newsletter</h4>
@@ -561,6 +575,69 @@
 
     <a href="#" id="scroll-top"><i class="far fa-arrow-up-from-arc"></i></a>
 
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const apiURL =
+          "https://conext.in/custom_users/api/staff_list_dep_wise/";
+
+        const teachingStaffContainer =
+          document.getElementById("teaching-staff");
+        const nonTeachingStaffContainer =
+          document.getElementById("non-teaching-staff");
+        const teachingStaffSection =
+          teachingStaffContainer.closest(".staff-section");
+        const nonTeachingStaffSection =
+          nonTeachingStaffContainer.closest(".staff-section");
+
+        // Fetch data from the API
+        fetch(apiURL)
+          .then((response) => response.json())
+          .then((data) => {
+            if (data.status) {
+              // Populate teaching staff if available
+              if (data.teaching_staff.length > 0) {
+                data.teaching_staff.forEach((staff) => {
+                  teachingStaffContainer.innerHTML += `
+              <div class="staff-card">
+                <img src="${staff.picture}" alt="${staff.name}">
+                <div class="staff-details">
+                  <h3>${staff.name}</h3>
+                  <p>${staff.designation}</p>
+                  <p>${staff.department}</p>
+                </div>
+              </div>
+            `;
+                });
+              } else {
+                // Hide Teaching Staff section if no data
+                teachingStaffSection.style.display = "none";
+              }
+
+              // Populate non-teaching staff if available
+              if (data.non_teaching_staff.length > 0) {
+                data.non_teaching_staff.forEach((staff) => {
+                  nonTeachingStaffContainer.innerHTML += `
+              <div class="staff-card">
+                <img src="${staff.picture}" alt="${staff.name}">
+                <div class="staff-details">
+                  <h3>${staff.name}</h3>
+                  <p>${staff.designation}</p>
+                  <p>${staff.department}</p>
+                </div>
+              </div>
+            `;
+                });
+              } else {
+                // Hide Non-Teaching Staff section if no data
+                nonTeachingStaffSection.style.display = "none";
+              }
+            } else {
+              console.error("Error fetching staff data:", data.message);
+            }
+          })
+          .catch((error) => console.error("API Fetch Error:", error));
+      });
+    </script>
     <script
       data-cfasync="false"
       src="https://live.themewild.com/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"
@@ -579,5 +656,5 @@
     <script src="assets/js/main.js"></script>
   </body>
 
-  <!-- Mirrored from live.themewild.com/edubo/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 16 May 2024 05:26:39 GMT -->
+  <!-- Mirrored from live.themewild.com/edubo/event.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 16 May 2024 05:26:29 GMT -->
 </html>
