--- a/finance-officer.html
+++ b/finance-officer.html
@@ -272,10 +272,10 @@
         style="background: url(assets/img/breadcrumb/01.jpg)"
       >
         <div class="container">
-          <h2 class="breadcrumb-title">Scholarships</h2>
+          <h2 class="breadcrumb-title">Finance Officer</h2>
           <ul class="breadcrumb-menu">
             <li><a href="/">Home</a></li>
-            <li class="active">Scholarships</li>
+            <li class="active">Finance Officer</li>
           </ul>
         </div>
       </div>
